Tried changing main color and started post 1

--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -8,7 +8,8 @@ $spacing-unit:     30px;
 $light-gray: gray;
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color:      #60c17d;
+// changed this color for main brand - may mess with more
+$brand-color:      #1282a2;
 $projectbox-text:  #1e2126;
 
 // Color scheme for light
