--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -42,6 +42,27 @@ a {
   }
 }
 
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+# Clear floats after image containers
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
 
 
 p a {
